# cabal-cargo

./: .gitignore  README.md  cabal.project
.github/workflows/: ci.yml
cabal-cargo/: CHANGELOG.md  README.md  cabal-cargo.cabal
cabal-cargo/src/: CabalCargo.hs  Cabgo.hs
cabal-cargo/src/Cabgo/: Cargo.hs
test-project/: README.md  Setup.hs  test-project.cabal
test-project/app/: Main.hs
test-project/rustsrc/: Cargo.toml  build.rs  cbindgen.toml
test-project/rustsrc/src/: lib.rs
test-project/src/: Bindings.hs
test-project/test/: BindingsTest.hs  Spec.hs
