cabal-version:   2.4
name:            test-project
version:         0.0.0.0
synopsis:        See README for more info
description:
  See [README.md](https://github.com/lancelet/cabal-cargo/test-project/README.md)
  for more

homepage:        https://github.com/lancelet/cabal-cargo/test-project
bug-reports:     https://github.com/lancelet/cabal-cargo/issues
license:         MIT
author:          Jonathan Merritt
maintainer:      Jonathan Merritt <j.s.merritt@gmail.com>
copyright:       2021 Jonathan Merritt
category:        Build
extra-doc-files:
  CHANGELOG.md
  README.md
  rustsrc/build.rs
  rustsrc/Cargo.toml
  rustsrc/cbindgen.toml
  rustsrc/src/lib.rs

tested-with:     GHC ==8.10.7 || ==9.2.1
build-type:      Custom

custom-setup
  setup-depends:
    , base         >=4.14 && <4.17
    , cabal-cargo

source-repository head
  type:     git
  location: https://github.com/lancelet/cabal-cargo.git

common common-options
  build-depends:    base >=4.14.3 && <4.17
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie
    -Wunused-packages

  default-language: Haskell2010

executable test-project
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  test-project

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Bindings

test-suite test-project-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

-- build-depends:  test-project
